--- a/src/music/1990s.rst
+++ b/src/music/1990s.rst
@@ -31,6 +31,132 @@ TBD
 
 TBD
 
+1995
+----
+
+Even as a child, I felt pretty connected to the pop music of the day, and that
+would intensify as teenager. That said, 1995 was probably the most out of step I
+would ever be with the music that was being released. I was very much looking
+back to the sounds of the 60s and 70s and could barely care about the hits of
+the day. The year that I started high school, I was way more interested in
+classic rock radio than I was the modern rock most of my peers were listening
+to. I missed some classic records that I would only discover in retrospect,
+including my favorites below.
+
+TBD
+
+.. image:: images/1995.jpg
+  :width: 900
+  :alt: My favorite albums from 1995
+
+.. raw:: html
+  
+  <iframe style="border-radius:12px" 
+  src="https://open.spotify.com/embed/playlist/4myE6q8uTfwCHWfrrRCfry?utm_source=generator&theme=0"
+  width="100%" height="352" frameBorder="0" allowfullscreen="" 
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+
+- *Fun Trick Noisemaker* by **The Apples in Stereo** - I'm a much bigger fan of
+  the latter day, **ELO** tinged incarnation of this band. I like the earlier
+  garage pop version as well, but this is really the only record from that era
+  that stands out for me. I feel like they had things right on this first
+  record, and spent the next 5-6 trying to recreate that sound. I also feel like
+  the amateur production values here suit the music better than the more
+  elaborate productions that were to come. [*Memory*: When this got reissued on
+  vinyl, it was the moment that I realized I would have the opportunity to own
+  the large majority of my favorites on that format.]
+
+- *The Great Escape* by **Blur** - The record where they fully embrace their
+  jaunty, hyper-English side. What was hinted at on *Parklife* takes full form
+  here. They must have been such a cheerful, brightly colored alternative to the
+  other BritPop offerings of the day. It would all change again after this of
+  course, but this will always be what they do best in my opinion. I like some
+  of the latter day singles, but this is pretty much my off-ramp for this band.
+  [*Memory*: These guys barely made a dent in the USA, and at this point, they
+  were almost completely unknown. I can only imagine how much my Beatlemaniac
+  self would have loved this at the time. There was no internet to know about
+  this kind of thing back then!]
+
+- *Outside* by **David Bowie** - Peak 90s Bowie, and the work of an artist who
+  was still working very hard to innovate while capturing the spirit of the
+  current age. This is "art installation music" and modernist in that very 1990s
+  kind of way. This is the music of the early internet age. It is also still
+  very much a **David Bowie** record, and a great one at that. I didn't really
+  connect with this as much as his classic work back then, but not believe it to
+  stand among his very finest work. [*Memory*: In the late 90s I was a huge
+  Bowie fan, and I worked with another "music person" who only really liked this
+  record of his. We listened to it a bunch back then at work, but I just didn't
+  get it back then.]
+
+- *Alien Lanes* by **Guided By Voices** - The second (and final) record from
+  their peak era. A collection of perfect little lowfi pop gems, they would
+  never quite capture this again. [*Memory*: Back in the early days of Pandora,
+  it played "Game of Pricks" for me, and I was instantly hooked.]
+
+- *To Bring You My Love* by **PJ Harvey** - An interesting era for Polly Jean.
+  She dialed up the glam and amped up the rock, yet kept the essential character
+  that made the first two records so interesting. Its odd that this was such a
+  commercial breakthrough, but anything seemed possible in the mid-90s. As fast
+  as these changes came, they would be gone and replaced with something else
+  that was new and wonderful. [*Memory*: I never liked this one as much as what
+  came before and after. When the vinyl reissue series happened in the 2020
+  time frame, I thought long and hard about if I needed to add this one. I got
+  them all, and wow I am glad that I did.]
+
+- *Wowee Zowee* by **Pavement** - This is one of those times that I do not agree
+  with the crowd. This is almost universally considered their masterpiece. I
+  like it, but it is a little too long. There is a great single album here, but
+  not everything needed to make the cut. I think the albums before an after are
+  sharper statements, and have better focus in the playful and more series
+  sounds that proceeded and followed this one. That said, It is a still another
+  great record that I enjoy listening to, just not as much as those others.
+  [*Memory*: There was a used copy of this that sat on the counter at City
+  Lights records for years. I considered buying it, but never did. I never owned
+  a physical copy of this until the circa 2010 vinyl reissues that Matador did.]
+
+- *Different Class* by **Pulp** - I did't know about this music in the 90s, but
+  if I did, I would have loved it. Like many American youth of the time, I was
+  attracted to the brightness of English rock music that was a big contrast with
+  the murky post-grunge of the day. This has those wonderful dance elements that
+  you needed to look across the pond to find. It also has the high quality
+  songwriting that blows away the knuckle-draggers that were dominating the
+  radio in the US. [*Memory*: I became aware of these guys and this album when
+  William Shatner's cover of "Common People" was making the rounds in the 2003
+  time frame. What a strange point of entry, but regardless I'm glad I found my
+  way.]
+
+- *The Bends* by **Radiohead** - With how inventive of a guitarist Jonny
+  Greenwood is, It is a real shame that this is their last album as a guitar
+  based act. While the guitars would make their appearances in what came after,
+  this is the last time they had a staring role. A tremendous rock album, and a
+  milestone of the BritPop movement. "My Iron Lung" will always be one of their
+  best songs. [*Memory*: For years I tried to claim this my favorite of their
+  records. I think I was just making some passive resistance to the rise of
+  electronic rock in the early 2000s.]
+
+- *Ocean Beach* by **Red House Painters** - I always feel a little guilty that I
+  don't like the music that Mike Kozelek made after he got his life together, as
+  what he was doing in his darker moments. That said, this pleasant airy folk
+  rock record holds up well to his earlier work. Maybe it is because there is
+  just enough melancholy in tracks like "Summer Dress". [*Memory*: In 2009 I
+  spent some time as a tourist in San Francisco after a business trip to the
+  region. I decided to do a "Red House Painters Walking Tour" where I visited
+  all the places he name checked in the albums/songs, including Ocean Beach.]
+
+- *Mellon Collie and the Infinite Sadness* by **Smashing Pumpkins** - There have
+  been quite a few bands in history that for a brief moment in time, managed to
+  completely transcend themselves and make music that seems completely beyond
+  what they should be capable of. Smashing Pumpkins 1995-97 may be the most
+  extreme case of this. A period of stunning creativity and productivity, these
+  three years alone make them legends. This album is so over the top and
+  wonderful from the little piano ditty it starts with, to the lyrically
+  preposterous yet incredible "Bullet With Butterfly Wings", and what feels like
+  countless amazing and blistering rock tunes. People who say *Siamese Dream* is
+  better than this are crazy. [*Memory*: It's hard to separate this from *The
+  Aeroplane Flies High*, which collected the singles and B-sides that were
+  released in their glorious era. I actually loved that first.]
+
 1996
 ----
 
