--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -2990,6 +2990,16 @@ you spot it? I'm certainly not going to go through the process of making it agai
   Lakeshore Record Exchange and listened to them repeatedly as I taught myself
   how to wax my cross-country skiis in the basement lab at my work.]
 
+- *Dragonslayer* by **Sunset Rubdown** - A much more refined production, and a
+  slightly more straightforward collection of songs than what had come before.
+  Still best described at indie-prog, the title even seems to wink at the
+  nerdiness contained within. For a long time, this was the last work from these
+  guys, and a great time capsule of when indie rock was reaching into way artier
+  and more ambitious territory. [*Memory*: Somehow this made it to my sell pile
+  in late 2024 and I gave it a listen before making that designation official.
+  I'm not sure what I was thinking. This is an amazing record! Alas, it not in
+  the picture as a result of my losing track of it.]
+
 - *The XX* by **The XX** - A minimalist rock record that was wildly popular at
   the time and that you hear little about today. My personal relationship has a
   similar arc to it. One of my very favorites at the time, but something I
