--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -343,6 +343,15 @@ complicated. Eleven years later, here we are.
   record that he thrust towards the stage in rhythm to the music. It was a great
   show.]
 
+- *Mines* by **Menomena** - A more mature effort from a band that had been
+  making lighter more whimsical faire. It was a bit of a risky move, but it
+  works out. The saxophone and floor toms are still carrying things, and the
+  vocals are delivered with same yelp like intensity, but this is a more
+  measured and thoughtful collection of songs. [*Memory*: This was another
+  record that made this list years after the initial list was made. I was
+  hearing so much music around this time, I lost track of some pretty great
+  records. Glad I still had the vinyl record to remind me!] 
+
 - *Congratulations* by **MGMT** - I liked the first record, but it didn't
   prepare me for this. The fusion of classic psychedelic sounds and the more
   modern electro-indie was a revelation. "Flash Delirium" does so many different
@@ -392,6 +401,15 @@ complicated. Eleven years later, here we are.
   record. This is the kind of sincere, serene music that only Scandinavian bands
   can make for some reason. [*Memory*: This music was unexpectedly compelling
   live, as I discovered at the Pitchfork festival in 2011].
+
+- *LP4* by **Ratatat** - The last album (and my second favorite) of the classic
+  period for this band. Each of the albums added new elements, and they all add 
+  up to something pretty compelling, that manages to avoid sounded cluttered.
+  This feels like a more organic, American version of **Justice**. [*Memory*: I
+  remember ordering this for release day at Lakeshore Record Exchange. At this
+  point I was still buying most of my music in physical form, and was split
+  between the CD and Vinyl format. This seemed like something I wanted to own on
+  vinyl, and that was the right choice.]
 
 - *Senior* by **Royksopp** - It is very strange that they went out on this moody
   ambient masterpiece, but I'm not going to complain. Not a whiff of the pop
