add Caveman to 2013

--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -1077,6 +1077,28 @@ artist. This is the end of my youth.
   assumed this was the beginning of another string of successful Bowie records,
   but he would disappear again, and it would not work out that way]
 
+- *Caveman* by **Caveman** - This is an excellent, if very straightfoward indie
+  record. In many ways it speaks to both the peak of indie rock's influence, but
+  also its impending demise. It isn't a criticism of these guys who are the
+  utmost of professionals, but the music being produced by the small labels had
+  converged to a sound indistinguishable from countless major label acts of the
+  day. Even the self-titled label on the disk seems to point to a more refined
+  new beginning for the band after the rougher nature of their prior releases.
+  That said, I do prefer this over those rawer earlier efforts. That said, the
+  world was moving on from this kind of music, and those making it were no
+  longer concerned about differentiating themselves from the mainstream. I think
+  this record has been unjustly overlooked, as it got lost in the fading
+  relevance of indie. "In the City" and "Shut You Down" are a particularly
+  impactful sequence on the A side. [*Memory*: I saw this band at the bugjar the
+  year before this album came out, and then shortly after its release at the
+  Crossing Brookly Ferry festival. It was quite striking how far they had come
+  as a band in that time. You really felt like they were polishing the act for
+  bigger and great things to come. It is a shame they never got the attention
+  they deserved. Given that they didn't make my original list and were added
+  years later, I didn't give them the attention they deserved. I've worn the
+  really cool looking tour shirt I got at that bugjar show, way more times than
+  I have listened to their records.]
+
 - *Random Access Memories* by **Daft Punk** - This will be the last release to win
   the Album of the Year Grammy to appear on my list. I say this not just because
   of my "getting old" but because of trends in popular music that I do not
