--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -2999,6 +2999,14 @@ you spot it? I'm certainly not going to go through the process of making it agai
 Footnotes
 ---------
 
+**Albums that dropped off during the project**
+
+- You know, I feel like I was always trying to convince myself that I liked **At
+  The Drive In** and **The Mars Volta**. They made the images for 2000, 2003,
+  and 2005, but didn't make the cut as I really tried to engage with those
+  records. I think it is the kind of music I like, but executed in a way that I
+  don't really care for. Too screamo for me.
+
 **Songs from Albums that Didn't Make my Lists**
 
 This is the decade with the most albums, and by far the most favorite songs.
