--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -384,7 +384,7 @@ of both.
 
 OK, I'm definitely getting old. Two of my favorites are live albums by legacy
 acts, and half the records are jazz. It is very modern jazz though...I'm hip! Oh
-and yeah...my top favorite is by a band in the sixth decade of their career. Of
+and yeah, my top favorite is by a band in the sixth decade of their career. Of
 course I had to throw one new band in there to keep things fresh. Things were
 more organic than that, but definitely I have a different relationship with new
 music at age 44.
@@ -469,6 +469,18 @@ music at age 44.
   first time I listened to this record I was sad when the new music stopped
   after only four songs. That didn't last long, when I realized how great the
   live portion was.]
+
+- *Romanticism* by **Hana Vu** - There is a bit of a renaissance for young women
+  with a guitar making arty, indie pop. I think **Vu** is my favorite of this
+  movement. There are elements of the best 2010s indie pop here, but she brings
+  something fresh that her peers seem to lack. This is subtle music that seems
+  pleasant on first listen, but only fully reveals itself after repeated plays.
+  [*Memory*: I discovered the artist when she opened for **Soccer Mommy** as a
+  part of the 2025 Noise Pop Festival. In my opinion, she outperformed the
+  headliner by a fair margin and I was a new fan. In the old days I would have
+  gone right to the merch booth to buy a vinyl copy of her latest work, but I
+  can't be bothered to transport records on airplanes at this point. So I
+  ordered a copy of her latest record, which was on my porch when I got back.]
 
 - *Fearless Movement* by **Kamasi Washington** - Another fantastic collection of
   songs from the soloist and his very talented backing band. Things are a little
